git-annex (8.20201128) UNRELEASED; urgency=medium

  * Fix hang on shutdown of external special remote using ASYNC protocol
    extension. (Reversion introduced in version 8.20201007.)
  * Fix bug that made the next download after an empty file from a ssh
    or tor remote fail.
  * Avoid spurious "verification of content failed" message when downloading
    content from a ssh or tor remote fails due to the remote no longer
    having a copy of the content.

 -- Joey Hess <id@joeyh.name>  Mon, 30 Nov 2020 12:55:49 -0400

git-annex (8.20201127) upstream; urgency=medium

  * adjust: New --unlock-present mode which locks files whose content is not
    present (so the broken symlink is visible), while unlocking files whose
    content is present.
  * Added annex.adjustedbranchrefresh git config to update adjusted
    branches set up by git-annex adjust --unlock-present/--hide-missing.
  * Fix hang when an external special remote program exited but
    the stderr pipe to it was left open, due to a daemon having inherited
    the file descriptor.
  * Fix a bug that could make resuming a download from the web fail
    when the entire content of the file is actually already present
    locally.
  * examinekey: Added a "file" format variable for consistency with find,
    and for easier scripting.
  * init: When writing hook scripts, set all execute bits, not only
    the user execute bit.
  * upgrade: Support an edge case upgrading a v5 direct mode repo
    where nothing had ever been committed to the head branch.
  * Made the test suite significantly less noisy, only displaying command
    output when something failed.
  * Fix building without the torrent library.
    Thanks, Kyle Meyer.
  * Fix build on Windows.
  * Prevent windows assistant from trying (and failing) to upgrade
    itself, which has never been supported on windows.

 -- Joey Hess <id@joeyh.name>  Fri, 27 Nov 2020 12:54:11 -0400

git-annex (8.20201116) upstream; urgency=medium
