@@ -16,15 +16,21 @@ import Types.Transfer
 import Types.Key
 import qualified Types.Remote as Remote
 import Git.Types (RemoteName)
+import Types.StallDetection
 import Types.Messages
 import Messages.Serialized
 import Annex.Path
 import Utility.Batch
+import Utility.Metered
+import Utility.HumanTime
+import Utility.ThreadScheduler
 
-import Control.Concurrent.STM hiding (check)
 import Control.Concurrent
+import Control.Concurrent.Async
+import Control.Concurrent.STM hiding (check)
 import Control.Monad.IO.Class (MonadIO)
 import Text.Read (readMaybe)
+import Data.Time.Clock.POSIX
 import System.Log.Logger (debugM)
 
 data TransferRequest = TransferRequest TransferRequestLevel Direction (Either UUID RemoteName) KeyData AssociatedFile
@@ -68,7 +74,11 @@ withTransferrer' minimizeprocesses mkcheck program batchmaker pool a = do
   where
 	returntopool leftinpool check t i
 		| not minimizeprocesses || leftinpool == 0 =
-			liftIO $ atomically $ pushTransferrerPool pool i
+			-- If the transferrer got killed, the handles will
+			-- be closed, so it should not be returned to the
+			-- pool.
+			liftIO $ whenM (hIsOpen (transferrerWrite t)) $
+				liftIO $ atomically $ pushTransferrerPool pool i
 		| otherwise = liftIO $ do
 			void $ forkIO $ shutdownTransferrer t
 			atomically $ pushTransferrerPool pool $ TransferrerPoolItem Nothing check
@@ -90,24 +100,102 @@ checkTransferrerPoolItem program batchmaker i = case i of
 		return $ TransferrerPoolItem (Just t) check
 
 {- Requests that a Transferrer perform a Transfer, and waits for it to
- - finish. -}
+ - finish.
+ -
+ - When a stall is detected, kills the Transferrer.
+ -
+ - If the transfer failed or stalled, returns TransferInfo with an
+ - updated bytesComplete reflecting how much data has been transferred.
+ -}
 performTransfer
 	:: (Monad m, MonadIO m, MonadMask m)
-	=> Transferrer
+	=> Maybe StallDetection
 	-> TransferRequestLevel
-	-> Transfer
-	-> Maybe Remote
-	-> AssociatedFile
 	-> (forall a. Annex a -> m a)
 	-- ^ Run an annex action in the monad. Will not be used with
 	-- actions that block for a long time.
-	-> m Bool
-performTransfer transferrer level t mremote afile runannex = catchBoolIO $ do
-	(liftIO $ sendRequest level t mremote afile (transferrerWrite transferrer))
-	relaySerializedOutput
+	-> Maybe Remote
+	-> Transfer
+	-> TransferInfo
+	-> Transferrer
+	-> m (Either TransferInfo ())
+performTransfer stalldetection level runannex r t info transferrer = do
+	bpv <- liftIO $ newTVarIO zeroBytesProcessed
+	ifM (catchBoolIO $ bracket setup cleanup (go bpv))
+		( return (Right ())
+		, do
+			n <- case transferDirection t of
+				Upload -> liftIO $ atomically $ 
+					fromBytesProcessed <$> readTVar bpv
+				Download -> do
+					f <- runannex $ fromRepo $ gitAnnexTmpObjectLocation (transferKey t)
+					liftIO $ catchDefaultIO 0 $ getFileSize f
+			return $ Left $ info { bytesComplete = Just n }
+		)
+  where
+	setup = do
+		liftIO $ sendRequest level t r
+			(associatedFile info)
+			(transferrerWrite transferrer)
+		metervar <- liftIO $ newEmptyTMVarIO
+		stalledvar <- liftIO $ newTVarIO False
+		tid <- liftIO $ async $ 
+			detectStalls stalldetection metervar $ do
+				atomically $ writeTVar stalledvar True
+				killTransferrer transferrer
+		return (metervar, tid, stalledvar)
+	
+	cleanup (_, tid, stalledvar) = do
+		liftIO $ uninterruptibleCancel tid
+		whenM (liftIO $ atomically $ readTVar stalledvar) $ do
+			runannex $ showLongNote "Transfer stalled"
+			-- Close handles, to prevent the transferrer being
+			-- reused since the process was killed.
+			liftIO $ hClose $ transferrerRead transferrer
+			liftIO $ hClose $ transferrerWrite transferrer
+
+	go bpv (metervar, _, _) = relaySerializedOutput
 		(liftIO $ readResponse (transferrerRead transferrer))
 		(liftIO . sendSerializedOutputResponse (transferrerWrite transferrer))
+		(updatemeter bpv metervar)
 		runannex
+	
+	updatemeter bpv metervar (Just n) = liftIO $ do
+		atomically $ do
+			void $ tryTakeTMVar metervar
+			putTMVar metervar n
+		atomically $ writeTVar bpv n
+	updatemeter _bpv metervar Nothing = liftIO $
+		atomically $ void $ tryTakeTMVar metervar
+
+detectStalls :: Maybe StallDetection -> TMVar BytesProcessed -> IO () -> IO ()
+detectStalls Nothing _ _ = noop
+detectStalls (Just (StallDetection minsz duration)) metervar onstall = go Nothing
+  where
+	go st = do
+		starttm <- getPOSIXTime
+		threadDelaySeconds (Seconds (fromIntegral (durationSeconds duration)))
+		-- Get whatever progress value was reported most recently, or
+		-- if none were reported since last time, wait until one is
+		-- reported.
+		sofar <- atomically $ fromBytesProcessed <$> takeTMVar metervar
+		case st of
+			Nothing -> go (Just sofar)
+			Just prev
+				-- Just in case a progress meter somehow runs
+				-- backwards, or a second progress meter was
+				-- started and is at a smaller value than
+				-- the previous one.
+				| prev > sofar -> go (Just sofar)
+				| otherwise -> do
+					endtm <- getPOSIXTime
+					let actualduration = endtm - starttm
+					let sz = sofar - prev
+					let expectedsz = (minsz * durationSeconds duration)
+						`div` max 1 (ceiling actualduration)
+					if sz < expectedsz
+						then onstall
+						else go (Just sofar)
 
 {- Starts a new git-annex transferkeys process, setting up handles
  - that will be used to communicate with it. -}
@@ -171,8 +259,6 @@ shutdownTransferrer t = do
 {- Kill the transferrer, and all its child processes. -}
 killTransferrer :: Transferrer -> IO ()
 killTransferrer t = do
-	hClose $ transferrerRead t
-	hClose $ transferrerWrite t
 	interruptProcessGroupOf $ transferrerHandle t
 	threadDelay 50000 -- 0.05 second grace period
 	terminateProcess $ transferrerHandle t
